Changes in Mobile View

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="main">
-        <header id="left" class="left bg-dark min-vh-100 p-4 head">
+        <header id="left" class="left bg-dark p-4 head">
             <div class="d-flex flex-column">
                 <div class="profile d-flex flex-column justify-content-center align-items-center">
                     <img src="static/Images/Harry_Profile.jpg" alt="" class="img-fluid rounded-circle w-50">
@@ -442,7 +442,7 @@
                                 <div class="email">
                                     <i class="bi bi-envelope"></i>
                                     <h4>Email:</h4>
-                                    <p>harishparmar4884@gmail.com</p>
+                                    <p>email@example.in</p>
                                 </div>
 
                                 <div class="phone">
