--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
 
                 <div class="social-links mt-3 d-flex justify-content-around">
-                    <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                    <a href="#" class="github"><i class="bi bi-github"></i></a>
-                    <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://twitter.com/HarishP01663546" target="blank" class="twitter"><i class="bi bi-twitter"></i></a>
+                    <a href="https://github.com/LearnerHarry" target="blank" class="github"><i class="bi bi-github"></i></a>
+                    <a href="https://join.skype.com/invite/wslkkwizXfEh" target="blank" class="skype"><i class="bi bi-skype"></i></a>
+                    <a href="https://www.linkedin.com/in/harish-parmar-069520208/" target="blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
                 </div>
 
                 <nav id="navbar" class="nav-menu navbar">
